<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jujulad.l8.MetabolismCalculator">

    <EditText
        android:id="@+id/height"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <EditText
        android:id="@+id/output"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="88dp"
        android:ems="10"
        android:clickable="false"
        android:focusable="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:onClick="chooseAge"
        android:inputType="textPersonName"
        android:text="@string/age"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="172dp"
        android:layout_marginStart="163dp"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/method"
        android:layout_width="203dp"
        android:layout_height="28dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="7dp"
        android:entries="@array/Methods"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcMethod" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="203dp"
        android:layout_height="28dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="91dp"
        android:entries="@array/Genders"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calcMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="131dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="37dp"
        android:text="@string/calculation_method"
        app:layout_constraintBottom_toTopOf="@+id/method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="19dp"
        android:text="@string/calculate"
        android:onClick="calculate"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

</android.support.constraint.ConstraintLayout>
